2014-07-27
==========
- added Analisys menu
- building new interface...
- translated JFileChooser dialogs
- separate project for pondero-qa
- change name sex -> gender


2014-06-28
==========

- developed application site
- simplificat modalitatea de instalare a aplicatiei si de integrare a acesteia in sistemul de operare
- adaugat optiune de vizualizare a registrului de date in Excel direct din meniul aplicatiei
- adaugat posibilitatea salvarii fisierului cu alt nume
- adaugat un meniu de Ajutor care permite deschidera paginii web a aplicatiei
- implementat un sistem de logging pentru a usura raportarea si corectarea erorilor
- implementat o strategie de backup a fisierelor de date la deschiderea acestora
