@@ -1,10 +1,11 @@
-- open utility windows on parent centre
+
 - build full Participant report
 - add participant action
 - modify participant action
 - update participant update dialog
 - DOB only support in database
 - experience: wizard based interface
+- add location key in registry
 
 - preferences dialog
 - about dialog
