@@ -20,6 +20,7 @@ FileChooser.updateButtonToolTipText=Actualizare
 FileChooser.acceptAllFileFilterText=Toate tipurile de fi\u0219iere (*.*)
 lbl.APPLICATION=APPLICA\u021AIE
 lbl.TEST=TEST
+lbl.search=C\u0103utare
 lbl.add-modify=Gestionare...
 lbl.add=Ad\u0103ugare
 lbl.application=Aplica\u021Bie
