@@ -1,5 +1,7 @@
 2014-07-27
 ==========
+- double click on participant selection dialog selects participant
+- open utility windows centred on parent
 - added Analisys menu
 - building new interface...
 - translated JFileChooser dialogs
